# PlotJuggler

./: CMakeLists.txt
plotter_gui/: point_series_xy.cpp
plugins/DataSerialPort/: CMakeLists.txt  dataserialportreader.cpp  dataserialportreader.h
